# gemini-deep-research

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
gemini_deep_research/: api.py  main.py  models.py  service.py
usage/claude-code-skill/: gemini-deep-research.skill
usage/claude-code-skill/gemini-deep-research/: SKILL.md
