[project]
name = "gemini-deep-research"
version = "0.1.0"
description = "CLI tool for Google Deep Research API"
authors = [{ name = "Filip Prochazka", email = "dev@fprochazka.cz" }]
requires-python = ">=3.10,<4"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "typer>=0.15.0,<0.16",
    "rich>=13.7.0,<14",
    "python-dotenv>=1.0.0,<2",
    "google-genai>=1.56.0",
]

[project.scripts]
gemini-deep-research = "gemini_deep_research.main:app"

[dependency-groups]
dev = [
    "ruff>=0.14.0,<0.15",
    "pytest>=9.0.2,<10",
]

[tool.uv]

[tool.uv.build-backend]
module-name = ["gemini_deep_research"]
module-root = ""

[build-system]
requires = ["uv_build>=0.10.1,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
